# LocalSearch

./: .dockerignore  .gitignore  CONVERSATION_LOG.md  DEVELOPMENT_HISTORY.md  Dockerfile  RAM-DISK-INGEST.md  RAMDISK-OPTIMIZATION.md  RAM_DISK_SETUP.md  README.md  SESSION.md  USN_WORKFLOW.md  _analyze_audio_errors.py  _analyze_errors.py  _analyze_errors2.py  _analyze_errors3.py  _analyze_errors4.py  _analyze_msg_errors.py  _analyze_other_errors.py  _api_response.json  _chat_result.txt  _check_error_status.py  _check_errors.py  _check_full_error.py  _check_msg_api.py  _check_paths.py  _check_recent_errors.py  _check_remaining_errors.py  _check_stale_errors.py  _clear_pending.py  _detailed_error_check.py  _diag_chat.py  _diag_output.txt  _errors.py  _find_test_audio.py  _inspect_properties.py  _quick_status.py  _reset_codepage.py  _reset_msg.py  _reset_test_audio.py  _schema.py  (+43 more)
.claude/: settings.local.json
localsearch/: __init__.py  chunker.py  cli.py  config.py  dashboard.py  embedder.py  pipeline.py  usn_collector.py  worker.py
localsearch/crawler/: scanner.py  usn.py
localsearch/extractors/: audio.py  base.py  docx.py  image.py  msg.py  pdf.py  text.py  video.py
localsearch/query/: rag.py  search.py
localsearch/storage/: metadb.py  progress.py  ramdisk.py  vectordb.py
localsearch/web/: __init__.py  app.py
localsearch/web/static/: style.css
localsearch/web/templates/: base.html  chat.html  dashboard.html  search.html
tests/: test_chunker.py  test_extractors.py  test_pipeline.py  test_scanner.py  test_worker.py
